@@ -1,6 +1,9 @@
-import sbt.Tests.{Group, SubProcess}
-import uk.gov.hmrc.sbtdistributables.SbtDistributablesPlugin._
-import uk.gov.hmrc.SbtAutoBuildPlugin
+import uk.gov.hmrc.{DefaultBuildSettings, SbtAutoBuildPlugin}
+
+ThisBuild / scalaVersion := "2.13.12"
+ThisBuild / majorVersion := 0
+
+val bootstrapVersion = "8.5.0"
 
 lazy val scoverageSettings = {
   import scoverage.ScoverageKeys
@@ -16,57 +19,42 @@ lazy val scoverageSettings = {
 
 lazy val compileDeps = Seq(
   ws,
-  "uk.gov.hmrc"                  %% "bootstrap-backend-play-28" % "7.4.0",
-  "org.typelevel"                %% "cats-core"                 % "2.8.0",
-  "com.github.robtimus"           % "data-url"                  % "2.0",
-  "com.fasterxml.jackson.module" %% "jackson-module-scala"      % "2.14.0-rc1"
+  "uk.gov.hmrc"                  %% "bootstrap-backend-play-30" % bootstrapVersion,
+  "org.typelevel"                %% "cats-core"                 % "2.10.0",
+  "com.github.robtimus"           % "data-url"                  % "2.0.1",
+  "com.fasterxml.jackson.module" %% "jackson-module-scala"      % "2.17.0-rc1"
 )
 
-def testDeps(scope: String) =
+def testDeps(scope: String): Seq[ModuleID] =
   Seq(
-    "org.scalatest"       %% "scalatest"    % "3.2.13" % scope,
-    "com.vladsch.flexmark" % "flexmark-all" % "0.62.2" % scope
+    "uk.gov.hmrc"            %% s"bootstrap-test-play-30"        % bootstrapVersion % scope,
+    "com.vladsch.flexmark" % "flexmark-all" % "0.64.8" % scope,
+    "com.github.tomakehurst" % "wiremock"      % "3.0.1" % scope
   )
-
-lazy val itDeps = Seq(
-  "org.scalatestplus.play" %% "scalatestplus-play" % "5.1.0"  % "it",
-  "com.github.tomakehurst"  % "wiremock-jre8"      % "2.33.2" % "it"
-)
 
 lazy val root = (project in file("."))
   .settings(
-    // To resolve a bug with version 2.x.x of the scoverage plugin - https://github.com/sbt/sbt/issues/6997
-    libraryDependencySchemes ++= Seq("org.scala-lang.modules" %% "scala-xml" % VersionScheme.Always)
-  )
-  .settings(
     name := "file-transmission-synchronous",
     organization := "uk.gov.hmrc",
-    scalaVersion := "2.13.8",
     scalacOptions += "-Wconf:src=routes/.*:s",
     scalacOptions += "-Wconf:cat=unused-imports&src=html/.*:s",
     PlayKeys.playDefaultPort := 10003,
-    libraryDependencies ++= compileDeps ++ testDeps("test") ++ testDeps("it") ++ itDeps,
-    publishingSettings,
+    libraryDependencies ++= compileDeps ++ testDeps("test"),
     scoverageSettings,
     Compile / unmanagedResourceDirectories += baseDirectory.value / "resources",
     Compile / scalafmtOnCompile := true,
     Test / scalafmtOnCompile := true
   )
-  .configs(IntegrationTest)
-  .settings(
-    IntegrationTest / Keys.fork := false,
-    Defaults.itSettings,
-    IntegrationTest / unmanagedSourceDirectories += baseDirectory(_ / "it").value,
-    IntegrationTest / parallelExecution := false,
-    IntegrationTest / testGrouping := oneForkedJvmPerTest((IntegrationTest / definedTests).value),
-    IntegrationTest / scalafmtOnCompile := true,
-    majorVersion := 0
-  )
   .enablePlugins(PlayScala, SbtAutoBuildPlugin, SbtGitVersioning, SbtDistributablesPlugin)
 
-inConfig(IntegrationTest)(org.scalafmt.sbt.ScalafmtPlugin.scalafmtConfigSettings)
 
-def oneForkedJvmPerTest(tests: Seq[TestDefinition]) =
-  tests.map { test =>
-    new Group(test.name, Seq(test), SubProcess(ForkOptions().withRunJVMOptions(Vector(s"-Dtest.name=${test.name}"))))
-  }
+lazy val it = project
+  .enablePlugins(PlayScala)
+  .dependsOn(root % "test->test") // the "test->test" allows reusing test code and test dependencies
+  .settings(DefaultBuildSettings.itSettings(true) ++ Seq(
+    Test / Keys.fork := false,
+    Test / javaOptions += "-Djava.locale.providers=CLDR,JRE",
+    Test / parallelExecution := false,
+    Test / resourceDirectories := Seq(baseDirectory.value / "conf", sourceDirectory.value / "resources"),
+    libraryDependencies ++= (compileDeps ++ testDeps("test"))
+  ))
